--- a/css/styles.css
+++ b/css/styles.css
@@ -33,7 +33,7 @@ body {
     font-family:"Raleway", sans-serif;
     font-weight:700;
     font-size: 26px;
-    line-height: 1,19;
+    line-height: 1.19;
     letter-spacing: 0.03em;
     color: #000000;
 }
@@ -44,7 +44,7 @@ body {
 .header-link {
     font-weight: 500;
     font-size: 14px;
-    line-height: 1,14;
+    line-height: 1.14;
     letter-spacing: 0.02em;
     color: #212121;
     
@@ -88,6 +88,7 @@ text-align: center;
     background-color: var(--accent-colour);
     text-align: center;
     border: none;
+    cursor: pointer;
 }
 .hero-btn:hover, .hero-btn:focus{
     color: #FFFFFF;
@@ -243,6 +244,7 @@ text-align: center;
     color: #212121;
     background-color: var(--third-background-color);
     border: none;
+    cursor: pointer;
 }
 
 .portfolio-btn:hover,
